Fix: center div sizing and text cutoff issue

--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -112,6 +112,6 @@ body {
   top: 50%;
   transform: translate(-50%,-50%);
   z-index: 2;
-  max-width: 100%;
+  width: 100%;
 }
 
